# linq

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-macos-appleclang.yml  build-windows-msvc.yml  cmake-multi-platform.yml
cmake/: CompilerSetup.cmake
include/: linq.hpp
tests/: CMakeLists.txt  testbed.cpp  tests.cpp
